# handwriting_recognition

./: .gitignore  .gitmodules  Dockerfile  Readme.md  dev.env  digits_recognition_nn.html  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
nginx/: Dockerfile  nginx.conf
nginx/site_conf/: default  nginx.conf
src/: poetryinstall.sh  start.sh  uwsgi.ini  wait-for-it.sh
src/app/: settings.py  urls.py
src/handwriting/: admin.py  apps.py  forms.py  models.py  neural_network.py  urls.py  views.py
src/handwriting/management/commands/: count_chars.py  train.py
src/handwriting/migrations/: 0001_initial.py  0002_rawinputdata_discarded.py  0003_auto_20190929_1906.py  0004_dataset.py  0005_dataset_kind.py  0006_delete_dataset.py
src/handwriting/static/: canvas.js
src/handwriting/templates/: base.html  create_dataset.html  digits.html  index.html  predict.html
