[tool.poetry]
name = "handwriting_recognition"
version = "0.0.1"
description = "Handwriting recognition for digits and cyrilic characters"
authors = ["Bojan Adzievski <bojan.axievski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
django-crispy-forms = "^1.8.1"
numpy = "^1.17"
Pillow = "^6.2"
uwsgi = "^2.0"
scipy = "^1.3"
psycopg2-binary = "^2.8"
scikit-learn = "^0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
bpython = "^0.18.0"
pytest-django = "^3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
